--- a/src/app/admin-bookings/admin-bookings.component.css
+++ b/src/app/admin-bookings/admin-bookings.component.css
@@ -1,28 +1,20 @@
-.bookings-wrap-admin {
+/*Tabell med bokningar*/
+.bookings-wrap {
     background-color: #F9EAD7;
-    padding-bottom: 4rem;
-    background-position: center;
     background-repeat: no-repeat;
+    background-position: center;
     background-attachment: fixed;
 }
 
-.bookings-admin-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    flex-shrink: 4;
-    justify-content: space-around;
-    max-width: 1000px;
-    width: 100%;
-    margin: 0 auto;
-}
 
-.admin-bookings {
-    padding: 2rem;
-    margin: 2rem;
-    max-width: 400px;
-    width: 100%;
+
+.bookings-admin-table-wrap table {
     background-color: white;
-    box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.4);
+    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 h2 {
@@ -31,54 +23,44 @@ h2 {
     text-align: center;
 }
 
-h5 {
-    font-size: 2.2rem;
-}
-
-.btn-bookings-admin {
-    display: flex;
-    justify-content: space-between;
-    gap: 2rem;
-}
-
-.btn-bookings-admin button {
-    width: 100%;
-}
-
-.btn-bookings-admin button:first-child {
+table tr th {
     background-color: #F6A566;
-    border: none;
-    box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.2);
+    font-size: 1.8rem;
+    font-family: "Libre Bodoni", serif;
+    font-weight: 400;
     padding: 0.5rem;
 }
 
-.btn-bookings-admin button:last-child {
-    background-color: rgb(28, 48, 33);
+table tr:nth-child(1n) {
+    box-shadow: 0px 2px 2px 0px rgba(30, 30, 30, 0.2);
+}
+
+table tr:first-child {
+    background-color: #F6A566;
+}
+
+table tr td {
+    padding: 1rem;
+    font-size: 1.6rem;
+}
+
+.btn-bookings-admin button:first-child{
+    width: 100%;
+    background-color: #1e1e1e;
     border: none;
-    box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.2);
+    box-shadow: 0px 2px 2px 0px rgba(30, 30, 30, 0.2);
+    width: 100%;
     color: white;
     padding: 0.5rem;
-}
-
-/*Bokningar lista*/
-ul li {
-    list-style: none;
-    font-size: 1.8rem;
-}
-
-ul li:first-child {
-    font-weight: bold;
-    font-family: "Libre Bodoni", serif;
-}
-
-ul li:last-child {
     margin-bottom: 1rem;
 }
 
-.bookings-line {
-    display: block;
-    width: 0.2rem;
-    height: 8rem;
-    margin: 0 auto;
-    background-color: #1e1e1e;
+.btn-bookings-admin button:last-child{
+    width: 100%;
+    background-color: #F6A566;
+    border: none;
+    box-shadow: 0px 2px 2px 0px rgba(30, 30, 30, 0.2);
+    width: 100%;
+    color: #1e1e1e;
+    padding: 0.5rem;
 }
