--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,8 +1,9 @@
 
 .admin-main {
     background-color: #F9EAD7;
-    padding-bottom: 2rem;
+    padding-bottom: 5rem;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    padding-top: 5rem;
 }
