--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -87,6 +87,7 @@
                     <li> Datum och tid: {{bookingSuccessDateTime}}</li>
                     <li>Antal gäster: {{bookingSuccessGuests}} pers</li>
                 </ul>
+                <button (click)="bookingConfirmBtn()" class="btn-confirm-ok">Klart</button>
             </div>
             }
 
