--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,9 @@
 <app-intro />
 <app-photo-gallery />
 
-<app-menu />
+<div class="home-menu-wrap" [ngStyle]="{'background-image': 'url(' + patternImg  + ')'}">
+    <app-menu />
+</div>
 
 
 
