--- a/src/app/booking/booking.component.css
+++ b/src/app/booking/booking.component.css
@@ -67,6 +67,20 @@ input, select, textarea {
     background-color: #C5D4C7;
 }
 
+/*btn-klart*/
+.btn-confirm-ok {
+    background-color: #C5D4C7;
+    border: none;
+    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
+    width: 100%;
+    padding: 1rem;
+}
+
+.btn-confirm-ok:hover{
+    background-color: #1e1e1e;
+    color: white;
+}
+
 fa-icon {
     margin-right: 0.5rem;
 }
