--- a/src/app/admin-header/admin-header.component.css
+++ b/src/app/admin-header/admin-header.component.css
@@ -27,6 +27,11 @@
     transform: translate(0%, -50%);
 }
 
+.admin-login a:hover {
+    border-bottom: 1.5px solid white;
+    
+}
+
 .admin-login a {
     color: white;
     text-decoration: none;
