--- a/src/app/admin-header/admin-header.component.html
+++ b/src/app/admin-header/admin-header.component.html
@@ -4,7 +4,7 @@
     <div class="hero-img"></div>
     <div class="top-header">
         <div class="logo"><img [src]="cafeLogo" alt="Logotyp"></div>
-        <div class="admin-login"><a (click)="logout()"><fa-icon [icon]="faUserIcon" id="user-icon"></fa-icon>Logga ut</a></div>
+        <div class="admin-login"><a (click)="logout()"><fa-icon [icon]="faArrowRightToBracketIcon" id="user-icon"></fa-icon>Logga ut</a></div>
     </div>
     <div class="hero-text">
         <h1 id="intro"><a routerLink="/">Admin</a></h1>
