--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -11,7 +11,7 @@
     position: relative;
     background-color: white;
     padding: 2rem;
-    max-width: 800px;
+    max-width: fit-content;
     width: 100%;
     margin: 0rem auto;
     box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
@@ -38,6 +38,7 @@ h5 {
 
 p {
     margin-bottom: 1rem;
+    max-width: 55ch;
 }
 
 .menu-category {
