--- a/src/app/admin-bookings/admin-bookings.component.css
+++ b/src/app/admin-bookings/admin-bookings.component.css
@@ -6,7 +6,10 @@
     background-attachment: fixed;
 }
 
-
+.bookings-admin-table-wrap {
+    display: flex;
+    flex-direction: column;
+}
 
 .bookings-admin-table-wrap table {
     background-color: white;
@@ -14,7 +17,7 @@
     border-collapse: collapse;
     width: 100%;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 2rem auto;
 }
 
 h2 {
@@ -64,4 +67,60 @@ table tr td {
     color: #1e1e1e;
     padding: 0.5rem;
     margin-bottom: 1rem;
+}
+
+
+/*Ikoner*/
+fa-icon {
+    margin-right: 0.5rem;
+}
+
+#check-icon {
+    color: white;
+}
+
+.trash-icon {
+    color: white;
+    display: block;
+    margin-right: 0;
+}
+
+.pencil-icon {
+    display: block;
+    margin-right: 0;
+}
+
+/*Media queries*/
+
+@media screen and (max-width: 1080px) {
+
+    table,
+    thead,
+    tbody,
+    th,
+    td,
+    tr {
+        display: block;
+        text-align: left;
+    }
+
+
+    th {
+        display: none;
+    }
+
+    td {
+        position: relative;
+        text-align: left !important;
+        padding: 1rem 2rem !important;
+    }
+
+    td:before {
+        content: attr(data-label);
+        font-weight: bold;
+    }
+
+    .table-btn {
+        margin-bottom: 2rem;
+    }
 }
