Lagt till scroll btn top för snabb scroll till toppen, css styling, lagt in tider i egen component

--- a/src/app/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-navbar/admin-navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li><a routerLink="/admin" routerLinkActive="activeLink">Meny</a></li>
-        <li><a routerLink="/uppdatera" routerLinkActive="activeLink">Hantera Meny</a></li>
+        <li><a routerLink="/hanterameny" routerLinkActive="activeLink">Hantera Meny</a></li>
         <li><a routerLink="/bokningar" routerLinkActive="activeLink">Hantera Bokningar</a></li>
     </ul>
 </nav>
