--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,50 @@
 <footer>
-    <div class="footer-contact">
-        <h5>Kontakta oss</h5>
+    <div class="info-list-wrap">
+
+        <div class="footer-time">
+            <h5>Öppettider</h5>
+            <ul>
+                <li>{{timesStringsComponent.timeWeekday}}</li>
+                <li>{{timesStringsComponent.timeWeekend}}</li>
+                <li>{{timesStringsComponent.timeLunch}}</li>
+            </ul>
+        </div>
+
+        <div class="footer-contact">
+            <h5>Kontakta oss</h5>
+            <ul>
+                <li>Telefon: 040-1234567</li>
+                <li>Epost: cafelugnet&commat;malmo.com</li>
+                <li>Adress: Södra Förstadsgatan 19A, Malmö</li>
+            </ul>
+        </div>
+
+        <div class="footer-social">
+            <h5>Sociala medier</h5>
+            <ul>
+                <li>Facebook</li>
+                <li>Instagram</li>
+            </ul>
+        </div>
+
+        <div class="footer-social">
+            <h5>Snabba Länkar</h5>
+            <ul>
+                <li>Meny</li>
+                <li>Om oss</li>
+                <li>Hitta oss</li>
+                <li>Boka bord</li>
+                <li>Admin</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="copyright">
         <ul>
-            <li>Telefon: 040-1234567</li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>&copy; 2024 Café Lugnet</li>
+            <li>Mittuniversitet</li>
+            <li>Webbutvecklingsprogrammet</li>
+            <li>Hanin Farhan</li>
         </ul>
     </div>
 </footer>
