--- a/src/app/photo-gallery/photo-gallery.component.html
+++ b/src/app/photo-gallery/photo-gallery.component.html
@@ -21,9 +21,9 @@
                 <div class="gallery-img color-bg-2">
                     <div class="gallery-text text-date">
                         <h3>Öppettider</h3>
-                        <p>{{timeWeekday}}</p>
-                        <p>{{timeWeekend}}</p>
-                        <p>{{timeLunch}}</p>
+                        <p>{{timesStringsComponent.timeWeekday}}</p>
+                        <p>{{timesStringsComponent.timeWeekend}}</p>
+                        <p>{{timesStringsComponent.timeLunch}}</p>
                         <button id="btn-gallery-time"><a href="#lunchmeny" class="a-link">Meny</a></button>
                     </div>
                 </div>
