--- a/src/app/admin-bookings/admin-bookings.component.html
+++ b/src/app/admin-bookings/admin-bookings.component.html
@@ -5,7 +5,7 @@
     <div class="bookings-admin-table-wrap">
 
         <div #bookingWrapForm>
-            <app-booking #bookingComponent [bookingId]="bookingIdToUpdate" [useBackground]="false" (updateEvent)="updatedBooking(bookingTable)" />
+            <app-booking #bookingComponent [bookingId]="bookingIdToUpdate" [useBackground]="false" [displaySuccessMessage]="false" (updateEvent)="updatedBooking(bookingTable)" />
         </div>
         <div class="booking-table-container">
             <h2 #bookingTable>Bordsbokningar</h2>
