--- a/src/app/admin-update/admin-update.component.css
+++ b/src/app/admin-update/admin-update.component.css
@@ -78,6 +78,8 @@ textarea {
 
 }
 
+/*button*/
+
 .btn-add-dish {
     background-color: #1C3021;
     border: none;
@@ -91,6 +93,16 @@ textarea {
     cursor: pointer;
     background-color: #F6A566;
     color: #1e1e1e;
+}
+
+.btn-abort {
+    background-color: #1e1e1e;
+    color: white;
+    border: none;
+    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
+    width: 100%;
+    padding: 1rem;
+    margin-top: 2rem;
 }
 
 /*Ikoner*/
