--- a/src/app/booking/booking.component.css
+++ b/src/app/booking/booking.component.css
@@ -18,6 +18,9 @@ h2 {
 label {
     display: block;
     font-size: 1.8rem;
+    background-color: #F6A566;
+    padding: 0.5rem;
+    font-family: "Libre Bodoni", serif;
 }
 
 input {
@@ -51,21 +54,32 @@ textarea {
 input, select, textarea {
     border: 1.5px solid rgb(30, 30, 30, 0.2);
     box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.2);
-    margin-top: 0.5rem;
 
 }
 
 .btn-book-table {
-    background-color: #F6A566;
+    background-color: #1C3021;
     border: none;
     box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
     width: 100%;
     padding: 1rem;
+    color: white;
 }
 
 .btn-book-table:hover {
     cursor: pointer;
-    background-color: #C5D4C7;
+    background-color: #F6A566;
+    color: #1e1e1e;
+}
+
+.btn-abort {
+    background-color: #1e1e1e;
+    color: white;
+    border: none;
+    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
+    width: 100%;
+    padding: 1rem;
+    margin-top: 2rem;
 }
 
 /*btn-klart*/
@@ -84,6 +98,7 @@ input, select, textarea {
 
 fa-icon {
     margin-right: 0.5rem;
+    color: white;
 }
 
 /*error-meddelande*/
