--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,3 +1,14 @@
 footer {
-    background-color: #1C3021;
+    background-color: #1e1e1e;
+    color: white;
+    padding: 2rem;
+}
+
+footer ul {
+    list-style: none;
+}
+
+ul li {
+    font-size: 1.6rem;
+    font-weight: 300;
 }
