Lagt till media queries, fixat för responsivitet, hamburgarmeny i mobilläge med toggle, tagit bort vissa element i mindre skärm

--- a/src/app/admin-bookings/admin-bookings.component.css
+++ b/src/app/admin-bookings/admin-bookings.component.css
@@ -123,4 +123,10 @@ fa-icon {
     .table-btn {
         margin-bottom: 2rem;
     }
+
+    .booking-table-container {
+        margin: 0 auto;
+        max-width: 600px;
+        width: 100%;
+    }
 }
