--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="kontakt">
     <div class="contact-wrap">
         <h4>Kontakta oss</h4>
         <div class="contact-list">
@@ -9,8 +9,8 @@
             </ul>
 
             <ul>
-                <li>040-1234567</li>
-                <li>cafelugnet&commat;malmo.com</li>
+                <li><a href="tel:040-1234567">040-1234567</a></li>
+                <li><a href="mailto:cafelugnet&commat;malmo.com">cafelugnet&commat;malmo.com</a></li>
                 <li>Södra Förstadsgatan 19A, Malmö</li>
             </ul>
         </div>
