--- a/src/app/admin-navbar/admin-navbar.component.css
+++ b/src/app/admin-navbar/admin-navbar.component.css
@@ -54,3 +54,53 @@ nav ul li:hover::after, nav ul li:focus::after {
 .activeLink {
     border-bottom: 2px solid #1e1e1e;
 }
+
+.hamburger {
+    display: none;
+}
+
+
+@media screen and (max-width:850px) {
+
+    .hamburger {
+        cursor: pointer;
+        display: block;
+        color: #1e1e1e;
+        text-align: center;
+        font-size: 2.4rem;
+    }
+
+    nav {
+        position: sticky;
+        left: 0;
+        top: 0;
+        z-index: 100;
+        box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.4);
+        border: none;
+    }
+
+    nav ul {
+        flex-direction: column;
+        display: none;
+        padding: 0;
+        text-align: center;
+        margin-top: 2rem;
+    }
+
+    nav ul.active {
+        display: block;
+    }
+
+    nav ul li {
+        padding: 1rem 0;
+    }
+
+    nav ul li::after {
+        display: none;
+    }
+
+    nav ul li a.active {
+        border-bottom: 1.5px solid #1e1e1e;
+    }
+
+}
