--- a/src/app/admin-update/admin-update.component.css
+++ b/src/app/admin-update/admin-update.component.css
@@ -34,7 +34,6 @@ h2 {
 
 .add-dish-form {
     background-color: white;
-    margin: 2rem;
     padding: 2rem;
     box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.4);
 }
@@ -144,7 +143,6 @@ span.menu-error {
 .add-dish-menu-table table {
     background-color: white;
     box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
-    margin: 2rem;
     width: 100%;
     max-width: 600px;
     border-collapse: collapse;
@@ -196,4 +194,53 @@ table tr td {
     width: 100%;
     color: #1e1e1e;
     padding: 0.5rem;
+}
+
+
+/*Media queries*/
+
+@media screen and (max-width: 1080px) {
+
+    table,
+    thead,
+    tbody,
+    th,
+    td,
+    tr {
+        display: block;
+        text-align: left;
+    }
+
+
+    th {
+        display: none;
+    }
+
+    td {
+        position: relative;
+        text-align: left !important;
+        padding: 1rem 2rem !important;
+    }
+
+    td:before {
+        content: attr(data-label);
+        font-weight: bold;
+    }
+
+    .table-btn {
+        margin-bottom: 2rem;
+    }
+
+    #menu-add-dish {
+        flex-direction: column-reverse;
+        padding: 0;
+    }
+
+    .menu-form-wrap, .add-dish-menu-table {
+        margin: 0 auto;
+    }
+
+    .add-dish-form {
+        margin: 2rem;
+    }
 }
