--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -12,3 +12,31 @@ ul li {
     font-size: 1.6rem;
     font-weight: 300;
 }
+
+a {
+    color: white;
+}
+
+.info-list-wrap {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    justify-content: space-evenly;
+}
+
+.copyright {
+    width: 100%;
+    max-width: fit-content;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+/*Media queries för mindre skärm*/
+@media screen and (max-width: 850px) {
+    .info-list-wrap {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        flex-direction: column;
+    }
+}
