--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,11 +12,15 @@
 
         <div class="footer-contact">
             <h5>Kontakta oss</h5>
-            <ul>
-                <li>Telefon: 040-1234567</li>
-                <li>Epost: cafelugnet&commat;malmo.com</li>
-                <li>Adress: Södra Förstadsgatan 19A, Malmö</li>
-            </ul>
+            <div class="contact-list">
+    
+                <ul>
+                    <li>Telefon: <a href="tel:040-1234567">040-1234567</a></li>
+                    <li>Epost: <a href="mailto:cafelugnet&commat;malmo.com">cafelugnet&commat;malmo.com</a></li>
+                    <li>Adress: Södra Förstadsgatan 19A, Malmö</li>
+                </ul>
+            </div>
+    
         </div>
 
         <div class="footer-social">
