--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -29,7 +29,8 @@ nav ul li {
     transition: color 0.2s ease-in;
 }
 
-nav ul li:hover, nav ul li:focus {
+nav ul li:hover,
+nav ul li:focus {
     color: #1e1e1e;
     cursor: pointer;
 }
@@ -47,6 +48,59 @@ nav ul li::after {
     pointer-events: none;
 }
 
-nav ul li:hover::after, nav ul li:focus::after {
+nav ul li:hover::after,
+nav ul li:focus::after {
     opacity: 1;
+}
+
+.hamburger {
+    display: none;
+}
+
+
+
+
+@media screen and (max-width:850px) {
+
+    .hamburger {
+        cursor: pointer;
+        display: block;
+        color: #1e1e1e;
+        text-align: center;
+        font-size: 2.4rem;
+    }
+
+    nav {
+        position: sticky;
+        left: 0;
+        top: 0;
+        z-index: 100;
+        box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.4);
+        border: none;
+    }
+
+    nav ul {
+        flex-direction: column;
+        display: none;
+        padding: 0;
+        text-align: center;
+        margin-top: 2rem;
+    }
+
+    nav ul.active {
+        display: block;
+    }
+
+    nav ul li {
+        padding: 1rem 0;
+    }
+
+    nav ul li::after {
+        display: none;
+    }
+
+    nav ul li a.active {
+        border-bottom: 1.5px solid #1e1e1e;
+    }
+
 }
