--- a/src/app/photo-gallery/photo-gallery.component.css
+++ b/src/app/photo-gallery/photo-gallery.component.css
@@ -134,3 +134,14 @@ color-bg-1 {
     width: 100%;
     padding: 0.5rem;
 }
+
+/*Media queries för mindre skärm*/
+@media screen and (max-width: 850px) {
+    .gallery {
+        display: none;
+    }
+
+    .gallery-wrap {
+        display: none;
+    }
+}
