--- a/src/app/scroll-to-top-btn/scroll-to-top-btn.component.css
+++ b/src/app/scroll-to-top-btn/scroll-to-top-btn.component.css
@@ -1,4 +1,3 @@
-
 #btn-scrollTop {
     position: fixed;
     bottom: 20px;
@@ -25,4 +24,16 @@ button {
 
 fa-icon {
     font-size: 2rem;
+}
+
+/*Media queries för mindre skärm*/
+@media screen and (max-width: 850px) {
+    #btn-scrollTop {
+        width: 100%;
+        right: 0;
+        bottom: 0;
+        opacity: 1;
+        box-shadow: 2px 0 4px 2px rgb(30, 30, 30, 0.2);
+        border-radius: 0;
+    }
 }
