--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,7 +1,8 @@
 section {
     width: 100%;
-    background-color: #C5D4C7;
+    background-color: #1C3021;
     box-shadow: inset 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
+    color: white;
 }
 
 .about-wrap {
